--- a/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
@@ -4,38 +4,39 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
- <p:panel styleClass="main-starts-container">
-   <f:facet name="header">
-    <p:outputPanel>
-      <p:inputText id="filter" placeholder="Search project or start" value="#{processesIvyDevWfBean.filter}">
+<p:panel styleClass="main-starts-container ui-fluid">
+  <f:facet name="header">
+    <div class="ui-input-icon-left filter-container">
+      <i class="pi pi-search"/>
+      <p:inputText id="globalFilter" placeholder="Search" value="#{processesIvyDevWfBean.filter}">
         <p:ajax event="keyup" update="accordionContainer" />
       </p:inputText>
-    </p:outputPanel>
+    </div>
   </f:facet>
-  <h:panelGroup id="accordionContainer">
 
+  <h:panelGroup id="accordionContainer">
     <p:accordionPanel var="pmv" value="#{processesIvyDevWfBean.PMVs}" id="projectStarts"
      activeIndex="#{processesIvyDevWfBean.startsDataModel.activeIndex}" multiple="true">
       <p:tab id="project" titleStyleClass="straight-text-icon">
         <f:facet name="title">
-          <h:outputText id="pmvState" styleClass="si si-#{pmv.stateIcon}" />
+          <h:outputText id="pmvState" styleClass="p-mr-1 si si-#{pmv.stateIcon}" />
           <p:tooltip for="pmvState" value="#{pmv.state} - #{pmv.versionName}" position="top" />
           <h:outputText styleClass="starts-project-name" value="#{pmv.projectName}" />
         </f:facet>
 
-        <h:panelGroup id="caseMapsTitle" styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.caseMapStarts}">
+        <h:panelGroup id="caseMapsTitle" styleClass="p-mt-2" layout="block" rendered="#{!empty pmv.caseMapStarts}">
           <b><h:outputText value="Case Maps" /></b>
         </h:panelGroup>
         <p:repeat value="#{pmv.caseMapStarts}" var="casemapStart">
           <jc:startsPanelElement pmv="#{pmv}" start="#{casemapStart}"/>
         </p:repeat>
 
-        <h:panelGroup id="processesTitle" styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.categories}">
+        <h:panelGroup id="processesTitle" styleClass="p-mt-2" layout="block" rendered="#{!empty pmv.categories}">
           <b><h:outputText value="Processes" /></b>
         </h:panelGroup>
         <p:repeat value="#{pmv.categories}" var="category">
-          <p:outputPanel id="categoryContainer" styleClass="margin-top-10" rendered="#{!empty category.name}">
-            <i class="#{category.cssIcon} table-icon"></i>
+          <p:outputPanel id="categoryContainer" styleClass="p-mt-2" rendered="#{!empty category.name}">
+            <i class="#{category.cssIcon} p-mr-1"></i>
             <h:outputText id="categoryName" value="#{category.name}"/>
             <p:tooltip for="categoryName" value="#{category.tooltip}" position="top" />
           </p:outputPanel>
@@ -45,18 +46,18 @@
           </p:repeat>
         </p:repeat>
 
-        <h:panelGroup id="webServicesTitle" styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.webServiceProcesses}">
+        <h:panelGroup id="webServicesTitle" styleClass="p-mt-2" layout="block" rendered="#{!empty pmv.webServiceProcesses}">
          <b><h:outputText value="Web Services (WSDL)" /></b>
         </h:panelGroup>
         <p:repeat value="#{pmv.webServiceProcesses}" var="webServiceProcess">
-          <p:panel id="startElementWebServiceProcess" styleClass="start-element" rendered="#{pmv.active}">
-            <p:link href="#{webServiceProcess.link}" target="_blank" styleClass="flex-space start-link">
+          <h:panelGroup id="startElementWebServiceProcess" styleClass="p-d-flex start-element" rendered="#{pmv.active}">
+            <p:link href="#{webServiceProcess.link}" target="_blank" styleClass="start-link">
               <span class="straight-text-icon">
-                <i class="si si-network-arrow margin-right-5"></i>
+                <i class="si si-network-arrow p-mr-1"></i>
                 <span>#{webServiceProcess.name}</span>
               </span>
             </p:link>
-          </p:panel>
+          </h:panelGroup>
         </p:repeat>
 
       </p:tab>
