--- a/dev-workflow-ui/webContent/view/cleanup.xhtml
+++ b/dev-workflow-ui/webContent/view/cleanup.xhtml
@@ -6,24 +6,24 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
-      <h:form id="clanupForm">
-        <p:growl id="growl" showDetail="true" />
-        <h:panelGroup styleClass="card card-w-title custom-card cleanup-container" layout="block">
-          <div class="straight-text-icon card-header-title">
-            <h:outputText value="Cleanup" />
-          </div>
-          <p:outputPanel styleClass="margin-top-5">
-            <h:outputText value="When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer."/>
-          </p:outputPanel>
-          <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank main-starts-container">
+
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-recycling-trash-bin-2 card-title-icon"></i>
+          <h2 class="p-m-0">Cleanup</h2>
+        </div>
+        <h:form id="clanupForm">
+          <p:growl id="growl" showDetail="true" />
+          <p>When you click throuh different processes you create different types of data like cases, tasks etc. Here you can clean that data to reset your designer.</p>
+          <p:panelGrid columns="1" layout="flex">
             <p:selectBooleanCheckbox id="casesAndTasksCheckbox" value="#{cleanupIvyDevWfBean.casesTasksAndDependent}" itemLabel="All Cases, Tasks and dependent objects" />
             <p:selectBooleanCheckbox id="businessDataCheckbox" value="#{cleanupIvyDevWfBean.businessDataAndSearchIndex}" itemLabel="All Business Data and the search index" />
             <p:selectBooleanCheckbox id="identityProviderTokenCheckbox" value="#{cleanupIvyDevWfBean.identityProviderTokens}" itemLabel="All identity provider tokens" />
             <p:selectBooleanCheckbox id="dataCaches" value="#{cleanupIvyDevWfBean.dataCaches}" itemLabel="Data caches" />
             <p:commandButton id="cleanupBtn" value="Cleanup" icon="si si-recycling-trash-bin-2 " actionListener="#{cleanupIvyDevWfBean.cleanup}" update="growl" disabled="#{!adminIvyDevWfBean.isWorkflowAdmin() or !engineModeIvyDevWfBean.demoOrDesigner}"/>
           </p:panelGrid>
-        </h:panelGroup>
-      </h:form>
+        </h:form>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
