--- a/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
@@ -12,66 +12,74 @@
     <ui:define name="content">
       <ui:param name="intermediateElement" value="#{intermediateEventDetailsIvyDevWfBean.selectedIntermediateElement}"></ui:param>
 
-      <h:form id="intermediateElementDetailsForm">
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="detail-card-title">
-            <i class="si si-lg si-common-file-text detail-title-icon" />
-            <h:outputText value="Description" />
+      <div class="layout-dashboard">
+        <div class="p-grid">
+          <div class="p-col-12">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-title p-d-flex p-ai-center">
+                  <i class="p-pr-3 si si-common-file-text"></i>
+                  <h6 class="p-m-0">Description</h6>
+                </div>
+              </div>
+              <p:panelGrid id="intermediateElement" columns="2" layout="flex"
+                columnClasses="p-col-12 p-md-3, p-col-12 p-md-9">
+                <h:outputText value="Element Process ID" />
+                <h:outputText value="#{intermediateElement.processElementId}" id="id" />
+
+                <h:outputText value="Element Name" />
+                <h:outputText value="#{intermediateElement.name}" id="name" />
+
+                <h:outputText value="Description" />
+                <h:outputText value="#{intermediateElement.description}" id="description" />
+              </p:panelGrid>
+            </div>
           </div>
-          <p:panelGrid id="intermediateElement" columns="2" layout="grid" styleClass="ui-panelgrid-blank"
-            columnClasses="no-padding-left ui-g-3, no-padding-left ui-g-9">
 
-            <h:outputText value="Element Process ID" />
-            <h:outputText value="#{intermediateElement.processElementId}" id="id" />
+          <div class="p-col-12">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-title p-d-flex p-ai-center">
+                  <i class="p-pr-3 si si-analytics-graph"></i>
+                  <h6 class="p-m-0">Events</h6>
+                </div>
+              </div>
+              <p:dataTable var="event" value="#{intermediateEventDetailsIvyDevWfBean.selectedIntermediateElement.eventModel}"
+                id="eventsTable" rows="10" paginator="true" paginatorPosition="bottom"
+                paginatorAlwaysVisible="false" lazy="true">
 
-            <h:outputText value="Element Name" />
-            <h:outputText value="#{intermediateElement.name}" id="name" />
-
-            <h:outputText value="Description" />
-            <h:outputText value="#{intermediateElement.description}" id="description" />
-
-          </p:panelGrid>
-        </h:panelGroup>
-
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="detail-card-title">
-            <i class="si si-lg si-analytics-graph margin-right-5" />
-            <h:outputText value="Events" />
+                <p:column headerText="ID" width="70" sortBy="#{event.id}" sortOrder="ascending">
+                  <h:outputText value="#{event.id}" />
+                </p:column>
+                <p:column headerText="State" width="90" sortBy="#{event.state}">
+                  <h:panelGroup id="eventStateIcon">
+                    <i class="si-lg #{intermediateEventDetailsIvyDevWfBean.getEventStateIconCss(event)}" />
+                  </h:panelGroup>
+                  <p:tooltip id="eventStateTooltip" for="eventStateIcon" value="#{event.state}" position="top" />
+                </p:column>
+                <p:column headerText="Task" sortBy="#{event.task}">
+                  <jc:taskLink task="#{event.task}" id="event-task" />
+                </p:column>
+                <p:column headerText="Event ID" sortBy="#{event.eventIdentifier}">
+                  <h:outputText value="#{event.eventIdentifier}" />
+                </p:column>
+                <p:column headerText="Event received" sortBy="#{event.eventTimestamp}">
+                  <h:outputText value="#{event.eventTimestamp}" />
+                </p:column>
+                <p:column headerText="Timeout" sortBy="#{event.timeoutTimestamp}">
+                  <h:outputText value="#{event.timeoutTimestamp}" />
+                </p:column>
+                <p:column headerText="Timeout action" sortBy="#{event.timeoutAction}">
+                  <h:outputText value="#{event.timeoutAction}" />
+                </p:column>
+                <p:column headerText="Result">
+                  <h:outputText value="#{event.resultObject}" />
+                </p:column>
+              </p:dataTable>
+            </div>
           </div>
-          <p:dataTable var="event" value="#{intermediateEventDetailsIvyDevWfBean.selectedIntermediateElement.eventModel}"
-            id="eventsTable" styleClass="margin-top-5" rows="10" paginator="true" paginatorPosition="bottom"
-            paginatorAlwaysVisible="false" lazy="true">
-
-            <p:column headerText="ID" width="70" sortBy="#{event.id}" sortOrder="ascending">
-              <h:outputText value="#{event.id}" />
-            </p:column>
-            <p:column headerText="State" width="90" sortBy="#{event.state}">
-              <h:panelGroup id="eventStateIcon">
-                <i class="si-lg #{intermediateEventDetailsIvyDevWfBean.getEventStateIconCss(event)}" />
-              </h:panelGroup>
-              <p:tooltip id="eventStateTooltip" for="eventStateIcon" value="#{event.state}" position="top" />
-            </p:column>
-            <p:column headerText="Task" sortBy="#{event.task}">
-              <jc:taskLink task="#{event.task}" id="event-task" />
-            </p:column>
-            <p:column headerText="Event ID" sortBy="#{event.eventIdentifier}">
-              <h:outputText value="#{event.eventIdentifier}" />
-            </p:column>
-            <p:column headerText="Event received" sortBy="#{event.eventTimestamp}">
-              <h:outputText value="#{event.eventTimestamp}" />
-            </p:column>
-            <p:column headerText="Timeout" sortBy="#{event.timeoutTimestamp}">
-              <h:outputText value="#{event.timeoutTimestamp}" />
-            </p:column>
-            <p:column headerText="Timeout action" sortBy="#{event.timeoutAction}">
-              <h:outputText value="#{event.timeoutAction}" />
-            </p:column>
-            <p:column headerText="Result">
-              <h:outputText value="#{event.resultObject}" />
-            </p:column>
-          </p:dataTable>
-        </h:panelGroup>
-      </h:form>
+        </div>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
