--- a/dev-workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
@@ -3,7 +3,7 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
-  <div class="u-padding-0 flex-center height-100">
+  <div class="p-d-flex p-jc-center height-100">
     <h:panelGroup layout="block" styleClass="case-map-container" rendered="#{not empty casesDetailsIvyDevWfBean.getCaseMap().stages}">
       <p:repeat var="stage" value="#{casesDetailsIvyDevWfBean.getCaseMap().stages}" varStatus="count">
         <h:panelGroup styleClass="case-map-column">
@@ -25,7 +25,7 @@
       </p:repeat>
     </h:panelGroup>
     <c:if test="#{empty casesDetailsIvyDevWfBean.getCaseMap().stages}">
-      <i class="si si-road-sign-warning margin-right-5"/>
+      <i class="si si-road-sign-warning p-mr-1"/>
       <h:outputText value="No Case Map found." />
     </c:if>
   </div>
