--- a/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/taskList.xhtml
@@ -23,23 +23,21 @@
       <p:tooltip for="taskName" value="Task ID: #{task.id}" position="top" />
     </p:column>
 
-    <p:column headerText="Responsible" style="text-align: center;" responsivePriority="2">
+    <p:column headerText="Responsible" responsivePriority="2">
       <jc:user user="#{task.activator}" />
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;">
+    <p:column headerText="Start">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="End" style="text-align: center;" responsivePriority="3">
+    <p:column headerText="End" responsivePriority="3">
       <jc:datetime id="endTime" datetime="#{task.endTimestamp}"/>
     </p:column>
 
-    <p:column style="width: 60px; text-align: center;">
-      <h:link outcome="taskDetails">
-        <f:param name="task" value="#{task.id}" />
-        <i class="si si-lg si-information-circle"></i>
-      </h:link>
+    <p:column styleClass="table-btn-1">
+      <p:linkButton icon="si si-information-circle" styleClass="ui-button-outlined rounded-button"
+        href="taskDetails.xhtml?task=#{task.id}" />
     </p:column>
   </p:dataTable>
 
