--- a/dev-workflow-ui/webContent/includes/components/personalTasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/personalTasksTable.xhtml
@@ -4,18 +4,15 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
-  <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" style="margin-top:10px"
-    emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rowsPerPageTemplate="10,20,50"
-    rows="10" paginator="true" paginatorAlwaysVisible="false"
-    selectionMode="single"
-    paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}">
-    <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.executeTaskRow}" update="@form" />
+  <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" styleClass="ui-fluid"
+    emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rows="10" paginator="true" paginatorAlwaysVisible="false"
+    selectionMode="single">
+    <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.executeTaskRow}" />
     <f:facet name="header">
-      <p:outputPanel>
-        <h:outputText value="Search:" />
-        <p:inputText id="tasksFilter" onkeyup="PF('tasksTable').filter()" style="width:150px"
-          placeholder="Enter keyword" value="#{tasksIvyDevWfBean.tasksDataModel.filter}" />
-      </p:outputPanel>
+      <div class="ui-input-icon-left filter-container">
+        <i class="pi pi-search"/>
+        <p:inputText id="globalFilter" onkeyup="PF('tasksTable').filter()" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}" />
+      </div>
     </f:facet>
 
     <p:column filterBy="#{task.state}" styleClass="icon-row" sortBy="#{task.state}">
@@ -35,19 +32,17 @@
       </h:commandLink>
     </p:column>
 
-    <p:column headerText="Start" style="text-align: center;" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="2">
+    <p:column headerText="Start" sortBy="#{task.startTimestamp}" sortOrder="descending" responsivePriority="2">
       <jc:datetime id="startTime" datetime="#{task.startTimestamp}"/>
     </p:column>
 
-    <p:column headerText="Expiry" style="text-align: center;" sortBy="#{task.expiryTimestamp}" responsivePriority="2">
+    <p:column headerText="Expiry" sortBy="#{task.expiryTimestamp}" responsivePriority="2">
       <jc:datetime id="expiryTime" datetime="#{task.expiryTimestamp}"/>
     </p:column>
 
-    <p:column styleClass="icon-row" responsivePriority="2">
-      <h:link outcome="taskDetails">
-        <f:param name="task" value="#{task.id}" />
-        <i class="si si-lg si-information-circle"></i>
-      </h:link>
+    <p:column styleClass="table-btn-1" responsivePriority="2">
+      <p:linkButton icon="si si-information-circle" styleClass="ui-button-outlined rounded-button"
+        href="taskDetails.xhtml?task=#{task.id}" />
     </p:column>
   </p:dataTable>
 </ui:composition>
