--- a/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/descriptionCardHeaderActions.xhtml
@@ -5,38 +5,32 @@
   xmlns:jc="http://java.sun.com/jsf/composite/components">
 
   <div class="detail-action-container">
+    <h:form id="actionMenuForm">
+      <p:linkButton href="#{tasksDetailsIvyDevWfBean.executeTaskLink}" value="Start"
+        id="taskStartBtn" disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canBeStarted()}" icon="si si-arrow-right-1" />
 
-    <p:link href="#{tasksDetailsIvyDevWfBean.executeTaskLink}" styleClass="margin-right-5 straight-text-icon"
-      id="taskStartBtn" disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canBeStarted()}">
-      <h:outputText value="Start" />
-      <i class="si si-arrow-right-1 detail-action-icon-bold" />
-    </p:link>
+      <p:commandButton value="Sidesteps" styleClass="p-ml-1 ui-button-secondary" id="sidestepsBtn"
+        rendered="#{tasksDetailsIvyDevWfBean.selectedTask.renderSidestepBtn()}" icon="si si-arrow-down-1" />
+      <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
+        model="#{tasksDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
 
-    <p:commandLink value="Sidesteps" class="margin-right-10 straight-text-icon" id="sidestepsBtn"
-      rendered="#{tasksDetailsIvyDevWfBean.selectedTask.renderSidestepBtn()}">
-      <i class="si si-arrow-down-1 detail-action-icon"></i>
-    </p:commandLink>
-    <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
-      model="#{tasksDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
-
-    <p:commandLink class="divider-left margin-right-10" id="taskActionsBtn"
-      disabled="#{tasksDetailsIvyDevWfBean.selectedTask.done}">
-      <i class="fa-solid fa-ellipsis-vertical options-button"></i>
-    </p:commandLink>
-    <p:menu id="actionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom">
-      <p:menuitem value="Reset" actionListener="#{tasksDetailsIvyDevWfBean.reset()}" update="form"
-        disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canReset()}" id="taskResetBtn"
-        icon="si si-road-sign-u-turn-left" />
-      <p:menuitem value="Delegate" onclick="PF('delegateTaskModal').show()" id="taskDelegateBtn"
-        disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-move-to-bottom" />
-      <p:menuitem value="Park" actionListener="#{tasksDetailsIvyDevWfBean.park()}" update="form" id="taskParkBtn"
-        disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canPark()}" icon="si si-road-sign-u-turn-right" />
-      <p:menuitem value="Destroy" actionListener="#{tasksDetailsIvyDevWfBean.destroy()}" update="form"
-        disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" id="taskDestoryBtn" icon="si si-delete-1" />
-      <p:menuitem value="Expire now" actionListener="#{tasksDetailsIvyDevWfBean.expireTask}" update="form"
-        disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-alarm-bell-timer"
-        rendered="#{engineModeIvyDevWfBean.demoOrDesigner}" id="taskExpireBtn" />
-    </p:menu>
+      <p:commandButton styleClass="p-ml-1 ui-button-secondary ui-button-outlined rounded-button" id="taskActionsBtn"
+        disabled="#{tasksDetailsIvyDevWfBean.selectedTask.done}" icon="si si-navigation-menu-horizontal" />
+      <p:menu id="actionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom">
+        <p:menuitem value="Reset" actionListener="#{tasksDetailsIvyDevWfBean.reset()}" update="taskDetail, workflowEvents:workflowEvents, @form"
+          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canReset()}" id="taskResetBtn"
+          icon="si si-road-sign-u-turn-left" />
+        <p:menuitem value="Delegate" onclick="PF('delegateTaskModal').show()" id="taskDelegateBtn"
+          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-move-to-bottom" />
+        <p:menuitem value="Park" actionListener="#{tasksDetailsIvyDevWfBean.park()}" update="taskDetail, workflowEvents:workflowEvents, @form" id="taskParkBtn"
+          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.canPark()}" icon="si si-road-sign-u-turn-right" />
+        <p:menuitem value="Destroy" actionListener="#{tasksDetailsIvyDevWfBean.destroy()}" update="taskDetail, workflowEvents:workflowEvents, @form"
+          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" id="taskDestoryBtn" icon="si si-delete-1" />
+        <p:menuitem value="Expire now" actionListener="#{tasksDetailsIvyDevWfBean.expireTask}" update="taskDetail, workflowEvents:workflowEvents, @form"
+          disabled="#{!tasksDetailsIvyDevWfBean.selectedTask.state.active}" icon="si si-alarm-bell-timer"
+          rendered="#{engineModeIvyDevWfBean.demoOrDesigner}" id="taskExpireBtn" />
+      </p:menu>
+    </h:form>
   </div>
 
 </ui:composition>
