--- a/dev-workflow-ui/webContent/view/api-browser.xhtml
+++ b/dev-workflow-ui/webContent/view/api-browser.xhtml
@@ -7,19 +7,17 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
-      <h:form id="startsForm">
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-           <div class="flex-space">
-            <div class="straight-text-icon card-header-title">
-              <h:outputText value="API Browser" />
-            </div>
-            <p:linkButton id="browseApiBtn" icon="si si-network-browser" type="button" styleClass="margin-right-5"
-              target="_blank" href="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html"/>
-            <p:tooltip for="browseApiBtn" value="Open API browser in a new tab" position="top"/>
-          </div>
-          <iframe id="apiBrowser" src="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html" class="api-browser-frame"/>
-        </h:panelGroup>
-      </h:form>
+
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-network-browser card-title-icon"></i>
+          <h2 class="p-m-0">API Browser</h2>
+          <p:linkButton id="browseApiBtn" icon="si si-network-browser" styleClass="p-ml-auto rounded-button"
+            target="_blank" href="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html"/>
+          <p:tooltip for="browseApiBtn" value="Open API browser in a new tab" position="top"/>
+        </div>
+        <iframe id="apiBrowser" src="/#{apiBrowserIvyDevWfBean.app}/api-browser/index.html" class="api-browser-frame"/>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
