--- a/dev-workflow-ui/webContent/view/caseDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/caseDetails.xhtml
@@ -11,147 +11,140 @@
 
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-
       <h:form id="form">
-
-        <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank grid-smaller-padding"
-          columnClasses="ui-g-12 ui-lg-8, ui-g-12 ui-lg-4">
-
-          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <div class="detail-card-header">
-              <div class="detail-card-title">
-                <i class="si si-lg si-common-file-text detail-title-icon" />
-                <h:outputText value="Description" />
-              </div>
-              <p:commandLink value="Destroy case" class="straight-text-icon margin-right-5"
-                disabled="#{not casesDetailsIvyDevWfBean.canBeDestoryed()}" id="caseDestroyBtn"
-                actionListener="#{casesDetailsIvyDevWfBean.selectedCase.destroy}" update="form">
-                <i class="si si-delete-1 detail-action-icon" />
-              </p:commandLink>
-            </div>
-            <p:separator />
-            <ui:include src="/includes/components/caseDetails/description.xhtml" />
-          </h:panelGroup>
-
-          <h:panelGroup styleClass="card card-w-title custom-card casemap-card" layout="block"
-            rendered="#{casesDetailsIvyDevWfBean.caseMap}">
-            <div>
-              <h:panelGroup layout="block" styleClass="flex-space">
-                <div class="straight-text-icon detail-card-title">
-                  <i class="si si-lg si-information-circle detail-title-icon" />
-                  <h:outputText value="Case Map" />
+        <div class="layout-dashboard">
+          <div class="p-grid">
+            <div class="p-col-12 p-lg-8">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-common-file-text"></i>
+                    <h6 class="p-m-0">Description</h6>
+                  </div>
+                  <p:commandButton icon="si si-delete-1" styleClass="ui-button-danger rounded-button"
+                    disabled="#{not casesDetailsIvyDevWfBean.canBeDestoryed()}" id="caseDestroyBtn"
+                    actionListener="#{casesDetailsIvyDevWfBean.selectedCase.destroy}" update="@this, caseDetails, caseHierarchy" />
                 </div>
-                <div class="straight-text-icon">
-                  <h:panelGroup layout="block" rendered="#{not empty casesDetailsIvyDevWfBean.sidesteps}">
-                    <p:commandLink value="Sidesteps" class="straight-text-icon margin-right-10" id="sidestepsBtn">
-                      <i class="si si-arrow-down-1 detail-action-icon" />
-                    </p:commandLink>
-                    <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
-                      model="#{casesDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
+                <ui:include src="/includes/components/caseDetails/description.xhtml" />
+              </div>
+            </div>
+
+            <h:panelGroup styleClass="p-col-12 p-lg-4" layout="block" rendered="#{casesDetailsIvyDevWfBean.caseMap}">
+              <div class="card casemap-card p-d-flex p-flex-column">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-information-circle"></i>
+                    <h6 class="p-m-0">Case Map</h6>
+                  </div>
+                  <div class="straight-text-icon">
+                    <h:panelGroup layout="block" rendered="#{not empty casesDetailsIvyDevWfBean.sidesteps}">
+                      <p:commandButton value="Sidesteps" icon="si si-arrow-down-1" id="sidestepsBtn" />
+                      <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
+                        model="#{casesDetailsIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
+                    </h:panelGroup>
+                  </div>
+                </div>
+                <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
+                <p:commandLink id="openCaseMapUiViewerBtn" styleClass="p-d-flex p-jc-center"
+                  oncomplete="PF('process-viewer-dlg').show()" update="form:processViewer:processViewerDialog" actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}">
+                  <h:outputText value="Open Case Map Viewer" />
+                  <i class="p-ml-1 si si-expand-6" />
+                </p:commandLink>
+              </div>
+            </h:panelGroup>
+
+            <h:panelGroup styleClass="p-col-12 p-lg-4" layout="block" rendered="#{!casesDetailsIvyDevWfBean.caseMap}">
+              <div class="card p-d-flex p-flex-column">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-information-circle"></i>
+                    <h6 class="p-m-0">Process Viewer</h6>
+                  </div>
+                  <p:commandButton id="openProcessViewerBtn" icon="si si-expand-6" styleClass="ui-button-secondary rounded-button"
+                    actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
+                    oncomplete="PF('process-viewer-dlg').show()" update="form:processViewer:processViewerDialog" />
+                </div>
+                <div class="height-100 p-d-flex p-jc-center p-ai-center">
+                  <p:commandLink id="cardOpenprocessViewerBtn"
+                    actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
+                    oncomplete="PF('process-viewer-dlg').show()" update="form:processViewer:processViewerDialog">
+                    <i class="si si-hierarchy-6 si-rotate-270 p-mr-1" />
+                    <h:outputText value="Open Process Viewer" />
+                  </p:commandLink>
+                </div>
+              </div>
+            </h:panelGroup>
+
+            <div class="p-col-12 p-lg-8">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-layout-bullets"></i>
+                    <h6 class="p-m-0">Task list</h6>
+                  </div>
+                  <h:panelGroup id="switchContainer" styleClass="p-d-inline-flex p-ai-center">
+                    <h:outputText value="Show system tasks" class="p-mr-2" />
+                    <p:toggleSwitch id="showSystemTasksSwitch" value="#{casesDetailsIvyDevWfBean.showSystemTasks}">
+                      <p:ajax update="form:tasks" />
+                    </p:toggleSwitch>
                   </h:panelGroup>
                 </div>
-              </h:panelGroup>
-              <p:separator />
+                <ui:include src="/includes/components/caseDetails/taskList.xhtml" />
+              </div>
             </div>
-            <ui:include src="/includes/components/caseDetails/caseMap.xhtml" />
-            <p:commandLink id="openCaseMapUiViewerBtn" class="margin-right-10 straight-text-icon flex-center"
-              oncomplete="PF('process-viewer-dlg').show()" update="@form" actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}">
-              <h:outputText value="Open Case Map Viewer" styleClass="margin-right-5"/>
-              <i class="si si-expand-6" />
-            </p:commandLink>
-          </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card casemap-card" layout="block"
-            rendered="#{!casesDetailsIvyDevWfBean.caseMap}">
-            <div>
-              <h:panelGroup layout="block" styleClass="flex-space">
-                <div class="straight-text-icon detail-card-title">
-                  <i class="si si-lg si-information-circle detail-title-icon" />
-                  <h:outputText value="Process Viewer" />
+            <div class="p-col-12 p-lg-4">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-task-list-approve"></i>
+                    <h6 class="p-m-0">Case hierarchy</h6>
+                  </div>
                 </div>
-                <p:commandLink id="openProcessViewerBtn" styleClass="margin-right-10"
-                  actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
-                  oncomplete="PF('process-viewer-dlg').show()" update="@form">
-                  <i class="si si-expand-6" />
-                </p:commandLink>
-              </h:panelGroup>
-              <p:separator />
+                <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
+              </div>
             </div>
-            <div class="flex-center height-100">
-              <p:commandLink id="cardOpenprocessViewerBtn" styleClass="straight-text-icon"
-                actionListener="#{casesDetailsIvyDevWfBean.setViewerLink()}"
-                oncomplete="PF('process-viewer-dlg').show()" update="@form">
-                <i class="si si-hierarchy-6 si-rotate-270 margin-right-5" />
-                <h:outputText value="Open Process Viewer" />
-              </p:commandLink>
+
+            <div class="p-col-12 p-lg-8">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-cog"></i>
+                    <h6 class="p-m-0">Custom fields</h6>
+                  </div>
+                </div>
+                <jc:customFields id="customFields" customFields="#{casesDetailsIvyDevWfBean.customFields}" />
+              </div>
             </div>
-          </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <h:panelGroup styleClass="table-title-switch related-element">
-              <h:panelGroup id="cardTitleContainer" styleClass="detail-card-title">
-                <i class="si si-lg si-task-list-approve detail-title-icon" />
-                <h:outputText value="Task list" />
-              </h:panelGroup>
-              <h:panelGroup id="switchContainer" styleClass="straight-text-icon">
-                <h:outputText value="Show system tasks" class="margin-right-10" />
-                <p:toggleSwitch id="showSystemTasksSwitch" value="#{casesDetailsIvyDevWfBean.showSystemTasks}">
-                  <p:ajax update="form:tasks" />
-                </p:toggleSwitch>
-              </h:panelGroup>
-            </h:panelGroup>
-            <ui:include src="/includes/components/caseDetails/taskList.xhtml" />
-          </h:panelGroup>
+            <div class="p-col-12 p-lg-4">
+              <div class="card documents-card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-office-file-doc-1"></i>
+                    <h6 class="p-m-0">Documents</h6>
+                  </div>
+                </div>
+                <ui:include src="/includes/components/caseDetails/documents.xhtml" />
+              </div>
+            </div>
 
-          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
-              <i class="si si-lg si-task-list-approve detail-title-icon" />
-              <h:outputText value="Case hierarchy" />
-            </h:panelGroup>
-            <ui:include src="/includes/components/caseDetails/caseList.xhtml" />
-          </h:panelGroup>
-
-          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
-              <i class="si si-lg si-cog detail-title-icon" />
-              <h:outputText value="Custom fields" />
-            </h:panelGroup>
-            <jc:customFields id="customFields" customFields="#{casesDetailsIvyDevWfBean.customFields}" />
-          </h:panelGroup>
-
-          <h:panelGroup id="documentsContainer" styleClass="card card-w-title custom-card" layout="block">
-            <h:panelGroup layout="block" styleClass="detail-card-title related-element">
-              <i class="si si-lg si-office-file-doc-1 detail-title-icon" />
-              <h:outputText value="Documents" />
-            </h:panelGroup>
-            <ui:include src="/includes/components/caseDetails/documents.xhtml" />
-          </h:panelGroup>
-
-        </p:panelGrid>
-
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="detail-card-title related-element">
-            <i class="si si-lg si-synchronize-arrow-clock detail-title-icon" />
-            <h:outputText value="Workflow Events" />
+            <div class="p-col-12">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-synchronize-arrow-clock"></i>
+                    <h6 class="p-m-0">Workflow Events</h6>
+                  </div>
+                </div>
+                <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{casesDetailsIvyDevWfBean.workflowEvents}" />
+              </div>
+            </div>
           </div>
-          <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{casesDetailsIvyDevWfBean.workflowEvents}" />
-        </h:panelGroup>
+        </div>
 
-        <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true"
-          style="margin-top: 6em">
-          <f:facet name="header">
-            <h:outputText value="#{casesDetailsIvyDevWfBean.viewerDialogTitle}" styleClass="margin-right-10" />
-            <p:link id="openViewerNewPage" styleClass="staight-text-icon"
-              href="#{casesDetailsIvyDevWfBean.viewerLink}">
-              <i class="si si-expand-6" style="font-size: 0.75em" />
-            </p:link>
-          </f:facet>
-          <iframe id="viewerFrame" src="#{casesDetailsIvyDevWfBean.viewerLink}"
-            style="height: calc(100vh - 195px); width: 100%; border: 0;" />
-        </p:dialog>
-
+        <jc:processViewer id="processViewer" title="#{casesDetailsIvyDevWfBean.viewerDialogTitle}" link="#{casesDetailsIvyDevWfBean.viewerLink}" />
       </h:form>
-
     </ui:define>
   </ui:composition>
 </h:body>
