--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -7,13 +7,12 @@
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
     <h:form id="casesForm">
-      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-        <div class="table-title-switch">
-          <div class="straight-text-icon card-header-title">
-            <h:outputText value="Cases"/>
-          </div>
-          <h:panelGroup class="straight-text-icon" layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
-            <h:outputText value="All Cases" class="margin-right-10"/>
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-task-list-approve card-title-icon"></i>
+          <h2 class="p-m-0">Cases</h2>
+          <h:panelGroup styleClass="p-ml-auto p-d-inline-flex p-ai-center" layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
+            <h:outputText value="All Cases" styleClass="p-mr-2"/>
             <p:toggleSwitch id="allCasesSwitch" value="#{casesIvyDevWfBean.casesDataModel.showAllCases}">
               <p:ajax update="casesForm"/>
             </p:toggleSwitch>
@@ -21,7 +20,7 @@
           </h:panelGroup>
         </div>
         <ui:include src="/includes/components/casesTable.xhtml" />
-      </h:panelGroup>
+      </div>
     </h:form>
     </ui:define>
   </ui:composition>
