--- a/dev-workflow-ui/webContent/view/end.xhtml
+++ b/dev-workflow-ui/webContent/view/end.xhtml
@@ -6,14 +6,13 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <h:form id="startsForm">
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="card-header-title">
-            <h:outputText value="Task End"/>
-          </div>
-          <h:outputText value="You have successfully finished the task."/>
-        </h:panelGroup>
-      </h:form>
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-check-circle-1 card-title-icon"></i>
+          <h2 class="p-m-0">Task End</h2>
+        </div>
+        <p>You have successfully finished the task.</p>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
