--- a/dev-workflow-ui/webContent/view/intermediateEvents.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediateEvents.xhtml
@@ -7,13 +7,17 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
-      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-        <h:outputText value="Intermediate Event Beans" styleClass="card-header-title" />
+
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-analytics-graph card-title-icon"></i>
+          <h2 class="p-m-0">Intermediate Event Beans</h2>
+        </div>
 
         <h:form id="intermediateEventBeansForm">
           <p:growl id="growl" showDetail="true"/>
           <p:dataTable id="intermediateEventsTable" var="intermediateEvent"
-            value="#{intermediateEventsIvyDevWfBean.intermediateEvents}" styleClass="margin-top-10" rows="5" paginator="true"
+            value="#{intermediateEventsIvyDevWfBean.intermediateEvents}" rows="5" paginator="true"
             paginatorPosition="bottom" paginatorAlwaysVisible="false" selectionMode="single"
             rowKey="#{intermediateEvent.processElementId}">
             <p:ajax event="rowSelect" listener="#{intermediateEventsIvyDevWfBean.onRowSelect}" update="@form" />
@@ -33,7 +37,7 @@
 
           </p:dataTable>
         </h:form>
-      </h:panelGroup>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
