--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -3,7 +3,7 @@
   xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-  <f:attribute name="primefaces.THEME" value="serenity-ivy" />
+  <f:attribute name="primefaces.THEME" value="freya-ivy-#{ivyFreyaTheme.mode}" />
   <f:facet name="first">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,55 +11,36 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
   </f:facet>
   <title>Login - #{ivyAdvisor.applicationName} #{ivyAdvisor.versionShort}</title>
-  <link rel="shortcut icon" href="#{resource['ivy-branding:favicon']}" />
-  <h:outputScript name="js/layout.js" library="serenity-layout" />
-  <h:outputScript name="js/ripple.js" library="serenity-layout" />
+  <link rel="shortcut icon" href="#{resource['ivy-webcontent:resources/images/favicon.png']}" />
 </h:head>
 
 <f:metadata>
   <f:viewParam name="originalUrl" value="#{loginIvyDevWfBean.originalUrl}"/>
 </f:metadata>
 <h:body styleClass="login-body">
-  <div class="login-panel ui-fluid">
-    <div class="login-panel-header">
-      <p:graphicImage name="logo_small" library="ivy-branding" alt="Logo" />
-    </div>
-    <div class="login-panel-content">
-      <h:form id="loginForm">
-        <p:focus for="#{loginIvyDevWfBean.focus()}" />
-        <div class="ui-g">
-          <div class="ui-g-12">
-            <h1>Login</h1>
-          </div>
-          <div class="ui-g-12">
-            <p:messages globalOnly="true" id="loginMessage" />
-          </div>
-          <div class="ui-g-12">
-            <h:panelGroup styleClass="md-inputfield">
-              <p:inputText id="userName" autocomplete="off" value="#{loginIvyDevWfBean.username}" required="true" />
-              <p:outputLabel for="userName" indicateRequired="false">Username</p:outputLabel>
-              <p:message for="userName" id="userNameMessage" />
-            </h:panelGroup>
-          </div>
-          <div class="ui-g-12">
-            <h:panelGroup styleClass="md-inputfield">
-              <p:password id="password" autocomplete="off" value="#{loginIvyDevWfBean.password}" required="true" />
-              <p:outputLabel for="password" indicateRequired="false">Password</p:outputLabel>
-              <p:message for="password" id="passwordMessage" />
-            </h:panelGroup>
-          </div>
-          <div class="ui-g-12">
-            <p:commandButton update="@form" id="login" actionListener="#{loginIvyDevWfBean.customLogin}" value="Sign in"
-              icon="si si-login-3" />
-          </div>
+  <h:form id="loginForm">
+    <div class="login-wrapper">
+      <div class="login-panel">
+        <div class="logo">
+          <p:graphicImage name="logo_small" library="ivy-branding" alt="Logo" />
         </div>
-      </h:form>
-    </div>
-  </div>
 
-  <h:outputStylesheet name="css/layout-ivy.css" library="serenity-layout" />
-  <h:outputStylesheet name="css/cockpit.css" library="serenity-layout" />
-  <h:outputStylesheet name="custom.css" library="ivy-branding" />
+        <p:focus for="userName" />
+        <p:inputText id="userName" autocomplete="off" value="#{loginIvyDevWfBean.username}" required="true" placeholder="Username / Email" />
+        <p:password id="password" autocomplete="off" value="#{loginIvyDevWfBean.password}" required="true" placeholder="Password" />
+
+        <p:commandButton update="@form" id="login" actionListener="#{loginIvyDevWfBean.customLogin}" value="Sign In" icon="si si-login-3" />
+        <p:messages globalOnly="true" id="loginMessage" />
+      </div>
+      <div class="login-footer">
+        <h4>Developer Workflow UI</h4>
+        <h6>Copyright Ⓒ Axon Ivy</h6>
+      </div>
+    </div>
+  </h:form>
+
+  <h:outputStylesheet name="css/layout-ivy-#{ivyFreyaTheme.mode}.css" library="freya-layout" />
+  <h:outputStylesheet name="primeflex-2.min.css" library="primeflex" />
 </h:body>
 
 </html>
