--- a/dev-workflow-ui/webContent/view/signals.xhtml
+++ b/dev-workflow-ui/webContent/view/signals.xhtml
@@ -7,34 +7,49 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
-      <h:form id="signalForm">
-        <p:growl id="growl" showDetail="true" />
-        <p:panelGrid columns="3" styleClass="ui-panelgrid-blank grid-smaller-padding" layout="grid"
-          columnClasses="ui-g-12 ui-md-4, ui-g-12 ui-md-8, ui-g-12" >
 
-          <h:panelGroup styleClass="card card-w-title custom-card height-100" layout="block">
-            <div class="straight-text-icon card-header-title">
-              <h:outputText value="Send signal" />
+      <div class="layout-dashboard">
+        <div class="p-grid">
+          <div class="p-col-12 p-md-4">
+            <div class="card ui-fluid">
+              <h:form id="signalForm">
+                <p:growl id="growl" showDetail="true" />
+                <div class="card-header">
+                  <div class="card-title p-d-flex p-ai-center">
+                    <i class="p-pr-3 si si-network-signal"></i>
+                    <h6 class="p-m-0">Send signal</h6>
+                  </div>
+                </div>
+                <ui:include src="/includes/components/signals/sendSignal.xhtml" />
+              </h:form>
             </div>
-            <ui:include src="/includes/components/signals/sendSignal.xhtml" />
-          </h:panelGroup>
+          </div>
 
-          <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-            <div class="straight-text-icon card-header-title">
-              <h:outputText value="Boundary signals" />
+          <div class="p-col-12 p-md-8">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-title p-d-flex p-ai-center">
+                  <i class="p-pr-3 si si-network-signal"></i>
+                  <h6 class="p-m-0">Boundary signals</h6>
+                </div>
+              </div>
+              <ui:include src="/includes/components/signals/boundarySignals.xhtml" />
             </div>
-            <ui:include src="/includes/components/signals/boundarySignals.xhtml" />
-          </h:panelGroup>
+          </div>
 
-          <h:panelGroup styleClass="card card-w-title card-margin-0" layout="block">
-            <div class="straight-text-icon card-header-title">
-              <h:outputText value="Fired signals" />
+          <div class="p-col-12">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-title p-d-flex p-ai-center">
+                  <i class="p-pr-3 si si-network-signal"></i>
+                  <h6 class="p-m-0">Fired signals</h6>
+                </div>
+              </div>
+              <ui:include src="/includes/components/signals/firedSignals.xhtml" />
             </div>
-            <ui:include src="/includes/components/signals/firedSignals.xhtml" />
-          </h:panelGroup>
-
-        </p:panelGrid>
-      </h:form>
+          </div>
+        </div>
+      </div>
     </ui:define>
   </ui:composition>
 </h:body>
