--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -1,31 +1,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
-  xmlns:pe="http://primefaces.org/ui/extensions">
+  xmlns:pe="http://primefaces.org/ui/extensions" xmlns:jc="http://java.sun.com/jsf/composite/components">
 
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <h:form id="startsForm" onkeypress="if (event.keyCode == 13) { return false; }">
 
-        <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-          <div class="straight-text-icon card-header-title">
-            <h:outputText value="Starts" />
+        <div class="card">
+          <div class="p-d-flex p-ai-center p-mb-3">
+            <i class="p-pr-3 si si-navigation-menu card-title-icon"></i>
+            <h2 class="p-m-0">Starts</h2>
           </div>
           <ui:include src="/includes/components/startsPanel.xhtml" />
-        </h:panelGroup>
+        </div>
 
-        <p:dialog id="processViewerDialog" widgetVar="process-viewer-dlg" width="80%" showEffect="fade" modal="true"
-          style="margin-top: 6em">
-          <f:facet name="header">
-            <h:outputText value="#{viewerIvyDevWfBean.viewerDialogTitle}" styleClass="margin-right-10" />
-            <p:link styleClass="staight-text-icon" href="#{viewerIvyDevWfBean.viewerLink}">
-              <i class="si si-expand-6" style="font-size: 0.75em" />
-            </p:link>
-          </f:facet>
-          <iframe id="iFrame" src="#{viewerIvyDevWfBean.viewerLink}" style="height: calc(100vh - 195px); width: 100%; border: 0;" />
-        </p:dialog>
-
+        <jc:processViewer id="processViewer" title="#{viewerIvyDevWfBean.viewerDialogTitle}" link="#{viewerIvyDevWfBean.viewerLink}" />
       </h:form>
     </ui:define>
   </ui:composition>
