--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -7,12 +7,13 @@
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
     <h:form id="tasksForm">
-      <h:panelGroup styleClass="card card-w-title custom-card" layout="block">
-        <div class="straight-text-icon card-header-title">
-          <h:outputText value="Tasks"/>
+      <div class="card">
+        <div class="p-d-flex p-ai-center p-mb-3">
+          <i class="p-pr-3 si si-layout-bullets card-title-icon"></i>
+          <h2 class="p-m-0">Tasks</h2>
         </div>
         <ui:include src="/includes/components/personalTasksTable.xhtml" />
-      </h:panelGroup>
+      </div>
     </h:form>
     </ui:define>
   </ui:composition>
